src/test/Success/test_while.c
int putchar(char c);

int main(){
    int i = 0;
    do {
        putchar('a');
        i = i + 1;
    }while(i <= 5);
}