src/test/Fail/test_type.c
int main(){
    char a;
    int b;
    int c;
    int d;

    a = b;
    d = a;
    c = a;
}